# learn-retrieval-augmented-generation

./: .gitignore  README.md  pyproject.toml
examples/1-managing-data/: embeddings.ipynb  example.ipynb
examples/3-applied-rag/: embeddings.ipynb
